fix(webgl-media-editor): Visible sidebar disturbs tabbing through menues

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -9,8 +9,8 @@
   --theme-contrast: 0.9; /* 0...1 where 0 means low contrast; 1 means high contrast, black-n-white in fact */
 
   /* Fonts */
-  --font-text: 'Inter Variable', arial, sans-serif;
-  --font-mono: 'JetBrains Mono', 'Courier New', courier, monospace;
+  --font-text: "Inter Variable", arial, sans-serif;
+  --font-mono: "JetBrains Mono", "Courier New", courier, monospace;
 
   /* Font sizes */
   --font-size-s: 13.75px;
@@ -136,8 +136,7 @@
   */
   --color-background-l: calc(0.35 - 0.35 * pow(var(--theme-contrast), 4));
   --color-background: oklch(
-    from var(--color-accent) var(--color-background-l)
-      calc(var(--color-background-l) * 0.3 * var(--theme-saturation)) h
+    from var(--color-accent) var(--color-background-l) calc(var(--color-background-l) * 0.3 * var(--theme-saturation)) h
   );
   --color-background-blur: oklch(from var(--color-background) l c h / 90%);
   --color-text-primary-l: calc(0.7 + 0.3 * pow(var(--theme-contrast), 0.8));
@@ -451,7 +450,8 @@ section {
       background-color: var(--color-border-level-2);
     }
 
-    &.active {
+    &.active,
+    &:active {
       background-color: var(--color-border-level-3);
     }
 
@@ -598,11 +598,7 @@ section {
 
 .promo-cta {
   margin-bottom: var(--space-section);
-  background-image: linear-gradient(
-    135deg,
-    var(--color-gradient-promo-start),
-    var(--color-gradient-promo-end)
-  );
+  background-image: linear-gradient(135deg, var(--color-gradient-promo-start), var(--color-gradient-promo-end));
   border-radius: 16px;
 }
 
@@ -821,7 +817,7 @@ img:where([width][height]) {
   height: auto;
 }
 
-img:where([src$='.svg']) {
+img:where([src$=".svg"]) {
   width: 100%;
   max-width: none;
   height: auto;
@@ -859,11 +855,10 @@ iframe {
 /* custom */
 
 :root {
-  --font-text: 'Liberation Sans', -apple-system, system-ui, sans-serif;
+  --font-text: "Liberation Sans", -apple-system, system-ui, sans-serif;
   --font-mono:
-    consolas, menlo, monaco, andale mono wt, andale mono, lucida console, lucida sans typewriter,
-    dejavu sans mono, bitstream vera sans mono, liberation mono, nimbus mono l, courier new, courier,
-    monospace;
+    consolas, menlo, monaco, andale mono wt, andale mono, lucida console, lucida sans typewriter, dejavu sans mono,
+    bitstream vera sans mono, liberation mono, nimbus mono l, courier new, courier, monospace;
 }
 
 .theme-dark .light-only,
@@ -884,4 +879,11 @@ iframe {
 
 .fullscreen-app {
   height: 100dvh;
+}
+
+:focus-visible, label:has(:focus-visible){
+  outline: 4px solid white;
+}
+label:has(:focus-visible) :focus-visible{
+  outline: none;
 }
